SNOW-2408336 Allow dots and hyphens in oauth url (#1186) (#1215)
SNOW-2408336 Allow dots and hyphens in oauth url (#1186) (#1215)